src/objects/Question_Dependency__c.object
<CustomObject>
    <fields>
        <fullName>Controlling_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Question that controls this dependency</inlineHelpText>
        <label>Controlling Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Dependent Questions</relationshipLabel>
        <relationshipName>Question_Dependencies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <inlineHelpText>Question that is dependent on this dependency</inlineHelpText>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Question Dependencies</relationshipLabel>
        <relationshipName>Question_Dependencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ValueCheckbox__c</fullName>
        <inlineHelpText>Checkbox value that the controlling question has to equal</inlineHelpText>
        <label>Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                    <default>true</default>
                    <label>True</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <inlineHelpText>Value that the controlling question has to be</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Question Dependency</label>
    <nameField>
        <displayFormat>QD-{000000}</displayFormat>
        <label>Question Dependency Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Dependencies</pluralLabel>
    <recordTypes>
        <fullName>Checkbox</fullName>
        <active>true</active>
        <description>Checkbox question dependency.</description>
        <label>Checkbox</label>
    </recordTypes>
    <recordTypes>
        <fullName>Multi_Select_Picklist</fullName>
        <active>true</active>
        <description>Multi-Select picklist question dependency.</description>
        <label>Multi-Select Picklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>Picklist</fullName>
        <active>true</active>
        <description>Picklist question dependency.</description>
        <label>Picklist</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>